JDBC-5173 Language parser (invalid token-type container indexing)